cmake_minimum_required (VERSION 2.8)

project (bsys NONE)
set (CMAKE_INSTALL_MESSAGE LAZY)

# posix executables
file(COPY src/init DESTINATION ${CMAKE_INSTALL_PREFIX}
  FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ
  GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)

install(FILES info.json DESTINATION "${CMAKE_INSTALL_PREFIX}")
